# myrcli

./: Cargo.toml  ReadMe.md
assets/: juventus.csv
fixtures/: b64.txt
src/: lib.rs  main.rs  opts.rs
src/cli/: base64.rs  csv.rs  genpass.rs  mod.rs  webimages.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  mod.rs  web_image.rs
