[package]
name = "myrcli"
version = "0.1.0"
edition = "2021"
author = "Rust CLI"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
headless_chrome = "1.0.10"
image = "0.25.1"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
url = "2.5.0"
zxcvbn = "3.0.1"

